Issue #15: ensure that default python and venv are 'use'd if none have been 'switch'ed to before

--- a/config/chef-repo/site-cookbooks/site/templates/default/pythonbrew.sh.erb
+++ b/config/chef-repo/site-cookbooks/site/templates/default/pythonbrew.sh.erb
@@ -1,1 +1,2 @@
 [[ -s $HOME/.pythonbrew/etc/bashrc ]] && source $HOME/.pythonbrew/etc/bashrc
+[[ ! -s $HOME/.pythonbrew/etc/current  ]] && pythonbrew use <%= @python %> && pythonbrew venv use <%= @venv %>
