Issue #17: a bloody (red marks on diff visualization, and 'when you change something, you change something') commit (of course it's a commit, what?), lost track of why and which changes, just take a look at the diff, ok?  Issue #15: also polluted commit with some python tweaks.

--- a/config/chef-repo/site-cookbooks/site/templates/default/pythonbrew.sh.erb
+++ b/config/chef-repo/site-cookbooks/site/templates/default/pythonbrew.sh.erb
@@ -1,2 +1,7 @@
-[[ -s $HOME/.pythonbrew/etc/bashrc ]] && source $HOME/.pythonbrew/etc/bashrc
-[[ ! -s $HOME/.pythonbrew/etc/current  ]] && pythonbrew use <%= @python %> && pythonbrew venv use <%= @venv %>
+if [ -s $HOME/.pythonbrew/etc/bashrc ]; then
+  source $HOME/.pythonbrew/etc/bashrc
+  if [ ! -s $HOME/.pythonbrew/etc/current ]; then
+    pythonbrew use <%= @python %>
+    pythonbrew venv use <%= @venv %>
+  fi
+fi
