--- a/config/chef-repo/site-cookbooks/site/templates/default/nvm.sh.erb
+++ b/config/chef-repo/site-cookbooks/site/templates/default/nvm.sh.erb
@@ -1,3 +1,3 @@
 #!/bin/bash
-[[ -r ~/nvm/nvm.sh ]] && ~/nvm/nvm.sh
-[[ -r $NVM_DIR/bash_completion ]] && $NVM_DIR/bash_completion
+[[ -e $HOME/nvm/nvm.sh ]] && . $HOME/nvm/nvm.sh
+[[ -r $NVM_DIR/bash_completion ]] && . $NVM_DIR/bash_completion
